--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,14 @@ body {
     background-color: var(--fondo);
 }
 
+h1, h2, p, a {
+    font-family: var(--titulos);
+}
+
+header {
+    padding-top: 35px;
+}
+
 .navbar-brand {
     font-family: var(--titulos);
     font-size: 30px;
@@ -40,13 +48,13 @@ body {
 
 nav.bg-velas {
     background-color: var(--fondo);
+    font-weight: 600;
 }
 
 nav.bg-velas ul li a {
     color: var(--color-primario);
     position: relative;
     font-size: 20px;
-    font-family: var(--titulos);
 }
 
 nav.bg-velas ul li a:hover {
@@ -77,6 +85,7 @@ nav.bg-velas ul li a:hover {
     font-size: 50px;
     color: var(--color-primario);
     margin-bottom: 30px;
+    font-weight: 800;
 }
 
 #hero .info span {
@@ -85,14 +94,12 @@ nav.bg-velas ul li a:hover {
 
 #hero .info p {
     color: var(--color-primario);
-    font-size: 18px;
+    font-size: 15px;
     margin-bottom: 60px;
-
 }
-
 
 #hero .info .dest h2 {
     color: var(--color-primario);
     font-size: 30px;
-    font-weight: bold;
+    font-weight: 700;
 }
