Modifiqué css hero

--- a/css/style.css
+++ b/css/style.css
@@ -71,14 +71,14 @@ nav.bg-velas ul li a:hover {
     padding: 150px 0;
 }
 
-#hero img {
-    border-radius: 4%;
-    width: 400px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-}
 
-#hero .info {
-    padding-left: 60px;
+#hero img {
+    max-width: 400px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    border-radius: 4%;
+    width: 100%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 #hero .info h1 {
