--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,15 @@
-/* Fuentes */
-
-
 /* Variables */
 :root {
     --fondo: #e0e0df;
     --color-primario: #3f3536;
     --color-verde: #7e9f83;
-    --titulo: ;
+    --color-verde-claro: #b7c7ba8c;
     --titulos: 'Montserrat', sans-serif;
-    --parrafos: ;
 }
 
 html {
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 *, *:before, *:after {
     box-sizing: inherit;
@@ -191,34 +188,40 @@ nav.bg-velas ul li a:hover {
     width: 100%;
     position: relative;
     text-align: left;
-    padding: 50px 0;
+    padding: 50px 0 100px 0;
 }
+
 
 #productos h2 {
     font-size: 40px;
     font-weight: 700;
     color: var(--color-primario);
     position: relative;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     text-align: center;
+}
+
+#productos article .producto {
+    margin-top: 60px;
 }
 
 #productos img {
     width: 100%;
-    border-radius: 4% 4% 0 0;
+    border-radius: 20px 20px 0 0;
 }
 
 #productos .producto {
     background-color: var(--fondo);
     max-width: 300px;
     margin: 0 auto;
+    margin-top: 60px;
 }
 
 #productos .producto .info-producto {
     background: white;
     padding: 15px;
     transition: .6s;
-    border-radius: 0 0 4% 4%;
+    border-radius: 0 0 20px 20px;
 }
 
 #productos .producto .info-producto:hover {
@@ -230,4 +233,94 @@ nav.bg-velas ul li a:hover {
     font-size: 15px;
     font-weight: 700;
     color: var(--color-primario);
+}
+
+/* Comentarios */
+
+#comentarios {
+    text-align: center;
+    width: 100%;
+    position: relative;
+    padding: 40px 0 100px;
+    color: var(--color-primario);
+    margin-bottom: 100px;
+}
+
+#comentarios .carousel-item {
+    background: var(--color-verde-claro) ;
+    padding: 100px 100px;
+    border-radius: 20px;
+    color: var(--color-primario);
+}
+
+#comentarios .carousel-item h3 {
+    font-size: 30px;
+    margin-bottom: 20px;
+    font-weight: 700;
+}
+
+#comentarios button {
+    padding: 13px 25px;
+    background: transparent;
+    border-radius: 12px;
+    border: 2px solid black;
+    color: black;
+    font: 20px;
+    font-weight: 700;
+    transition: .4s;
+    margin-top: 30px;
+}
+
+#comentarios button:hover {
+    background-color: black;
+    color: white;
+    transform: scale(1.1);
+}
+
+#comentarios button:active {
+    transform: scale(1);
+}
+
+/*  Footer  */
+
+footer .container {
+    border-top: 1px solid var(--color-primario);
+    padding: 40px 0;
+    text-align: center;
+}
+
+.navbar-brand.footer {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+footer span {
+    color: white;
+}
+
+footer p {
+    padding: 20px;
+    font-size: 15px;
+}
+
+
+footer .container img {
+    width: 25px;
+    margin-inline: 10px;
+    cursor: pointer;
+}
+
+footer .container img:hover {
+    opacity: 60%;
+}
+
+/* Responsive */
+
+@media screen and (min-width: 320px) and (max-width: 990px){
+    
+#hero {
+    text-align: center;
+}
+
+
 }
