--- a/css/style.css
+++ b/css/style.css
@@ -209,9 +209,9 @@ nav.bg-velas ul li a:hover {
 }
 
 .swiper {
-    width: 95%;
-    height: 95%;
-    padding: 20px;
+    width: 100%;
+    height: 100%;
+    padding: 70px 0;
     margin-top: 50px;
 }
 
@@ -304,6 +304,10 @@ nav.bg-velas ul li a:hover {
 
 #productos .info h3 {
     font-size: 19px;
+}
+
+.swiper-pagination-bullet {
+    background: var(--color-primario);
 }
 
 
