--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ nav.bg-velas ul li a:hover {
 .swiper {
     width: 100%;
     height: 100%;
-    padding: 70px 0;
+    padding: 70px 20px;
     margin-top: 50px;
 }
 
@@ -240,7 +240,7 @@ nav.bg-velas ul li a:hover {
   #productos .card {
     border-radius: 30px;
     border: none;
-    max-width: 250px;
+    max-width: 270px;
     margin: 0 auto;
 }
 
