--- a/css/style.css
+++ b/css/style.css
@@ -398,6 +398,54 @@ footer .container img:hover {
     opacity: 60%;
 }
 
+#suscribite {
+    text-align: center;
+    margin: 200px 0 200px 0;
+}
+
+#suscribite h2 {
+    color: var(--color-primario);
+    font-size: 40px;
+    font-weight: 700;
+}
+
+#suscribite input, #suscribite button {
+    padding: 12px 15px;
+    border: none;
+    outline: none;
+    font-size: 20px;
+    margin-top: 80px;
+}
+
+#suscribite input {
+    margin: 30px 0;
+    border-radius: 12px 0 0 12px;
+    color: var(--color-primario);
+}
+
+#suscribite button {
+    position: relative;
+    left: -6px;
+    border-radius: 0 12px 12px 0;
+    background-color: var(--color-primario);
+    color: white;
+}
+
+#suscribite button:hover {
+    opacity: 60%;
+}
+
+#suscribite button:active {
+    opacity: 100%;
+}
+
+
+#suscribite p {
+    font-size: 25px;
+    font-weight: 600;
+    margin: 100px;
+}
+
 /* Responsive */
 
 @media screen and (min-width: 320px) and (max-width: 990px){
@@ -410,6 +458,11 @@ footer .container img:hover {
     width: 85%;
 }
 
+#suscribite input,
+#suscribite button
+ {
+    font-size: 18px;
+}
 
 }
 
